--- a/amtuning-local/package.json
+++ b/amtuning-local/package.json
@@ -12,7 +12,8 @@
     "sync": "node scripts/sync-products.js full-sync",
     "sync:products": "node scripts/sync-products.js products-only",
     "sync:images": "node scripts/sync-products.js images-only",
-    "sync:test": "node scripts/sync-products.js test"
+    "sync:test": "node scripts/sync-products.js test",
+    "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^10.7.7",
@@ -34,6 +35,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.4"
   }
