--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,6 @@ yarn-error.log*
 
 # IDE
 .idea/
-.vscode/
 *.swp
 *.swo
 
@@ -36,3 +35,15 @@ coverage/
 # Temp files
 *.tmp
 *.temp
+
+# Large files
+*.zip
+*.webp
+*.mp4
+*.mov
+*.avi
+database/VSSPEED/Screenshots/
+database/VSSPEED/VS*.zip
+
+# Specstory
+.specstory/
