Add online storage system with cache, cookies, crypto payments, multi-provider OAuth, and deployment scripts

--- a/amtuning-local/.env.example
+++ b/amtuning-local/.env.example
@@ -1,1 +1,32 @@
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# Environment Variables for Firebase
+# Copy this file to .env and add your actual Firebase credentials
+
+VITE_FIREBASE_API_KEY=your-api-key-here
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
+VITE_FIREBASE_APP_ID=1:your-app-id:web:your-app-code
+
+# Shop.app Integration for Order Tracking
+# Get your Shop.app API key from: https://shop.app/developers
+VITE_SHOP_APP_API_KEY=your-shop-app-api-key-here
+VITE_SHOP_APP_MERCHANT_ID=vsspeed-global
+VITE_SHOP_APP_ENABLED=true
+
+# Transaction Encryption (AES-256) - CRITICAL: Generate secure random key
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+VITE_TRANSACTION_ENCRYPTION_KEY=your-256-bit-encryption-key-here
+VITE_BACKUP_ENCRYPTION_KEY=your-backup-encryption-key-here
+
+# Payment Processing (Stripe)
+VITE_STRIPE_PUBLIC_KEY=your-stripe-publishable-key
+# Server-side keys go in Firebase Functions config, not here
+
+# Antigravity Cloud Sync
+# Get GitHub token from: https://github.com/settings/tokens (repo scope)
+VITE_GITHUB_TOKEN=ghp_your_github_personal_access_token
+VITE_ANTIGRAVITY_SYNC_ENABLED=true
+VITE_ANTIGRAVITY_AUTO_SYNC_MINUTES=30
+
+# CRITICAL: NEVER commit the actual .env file with real keys to GitHub!
