--- a/amtuning-local/package.json
+++ b/amtuning-local/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview",
     "deploy-prep": "node deploy-vsspeed.js",
     "deploy": "npm run build && gh-pages -d dist",
-    "deploy-vsspeed": "node deploy-vsspeed.js && npm run deploy"
+    "deploy-vsspeed": "node deploy-vsspeed.js && npm run deploy",
+    "deploy-firebase": "bash deploy-firebase.sh",
+    "deploy-firebase-win": "deploy-firebase.bat"
   },
   "dependencies": {
     "@octokit/rest": "^21.0.2",
     "crypto-js": "^4.2.0",
     "firebase": "^11.1.0",
     "lucide-react": "^0.468.0",
+    "mysql2": "^3.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1"
@@ -31,5 +34,10 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "gh-pages": "^6.2.0",
     "vite": "^6.0.5"
+  },
+  "firebase": {
+    "developer": "devjemz",
+    "project": "vsspeed-global",
+    "deployCommand": "npm run deploy-firebase-win"
   }
 }
