Add MySQL setup scripts, database testing, and complete setup guide

--- a/amtuning-local/.env.example
+++ b/amtuning-local/.env.example
@@ -1,32 +1,53 @@
-# Environment Variables for Firebase
-# Copy this file to .env and add your actual Firebase credentials
+# VSSPEED.IO - Database Configuration
 
-VITE_FIREBASE_API_KEY=your-api-key-here
-VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your-sender-id
-VITE_FIREBASE_APP_ID=1:your-app-id:web:your-app-code
+# MySQL Connection
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=your_mysql_password_here
+MYSQL_DATABASE=vsspeed_production
 
-# Shop.app Integration for Order Tracking
-# Get your Shop.app API key from: https://shop.app/developers
-VITE_SHOP_APP_API_KEY=your-shop-app-api-key-here
-VITE_SHOP_APP_MERCHANT_ID=vsspeed-global
-VITE_SHOP_APP_ENABLED=true
+# Database Pool Settings
+DB_POOL_MIN=10
+DB_POOL_MAX=100
+DB_CONNECTION_TIMEOUT=5000
 
-# Transaction Encryption (AES-256) - CRITICAL: Generate secure random key
-# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-VITE_TRANSACTION_ENCRYPTION_KEY=your-256-bit-encryption-key-here
-VITE_BACKUP_ENCRYPTION_KEY=your-backup-encryption-key-here
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_firebase_api_key
+VITE_FIREBASE_AUTH_DOMAIN=vsspeed-global.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=vsspeed-global
+VITE_FIREBASE_STORAGE_BUCKET=vsspeed-global.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
+VITE_FIREBASE_APP_ID=your_app_id
 
-# Payment Processing (Stripe)
-VITE_STRIPE_PUBLIC_KEY=your-stripe-publishable-key
-# Server-side keys go in Firebase Functions config, not here
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your_redis_password
 
-# Antigravity Cloud Sync
-# Get GitHub token from: https://github.com/settings/tokens (repo scope)
-VITE_GITHUB_TOKEN=ghp_your_github_personal_access_token
-VITE_ANTIGRAVITY_SYNC_ENABLED=true
-VITE_ANTIGRAVITY_AUTO_SYNC_MINUTES=30
+# Security Email Configuration
+SECURITY_EMAIL_USER=vsspeedsupport@exotiekoh.github.io
+SECURITY_EMAIL_PASSWORD=your_email_app_password
+SUPPORT_EMAIL=vsspeedsupport@exotiekoh.github.io
 
-# CRITICAL: NEVER commit the actual .env file with real keys to GitHub!
+# Security Settings
+ENABLE_LOGIN_ALERTS=true
+ENABLE_ATTACK_DETECTION=true
+ALERT_ON_NEW_IP=true
+ALERT_ON_SUSPICIOUS_ACTIVITY=true
+
+# Payment API Keys
+VITE_STRIPE_PUBLIC_KEY=pk_test_...
+VITE_COINBASE_API_KEY=your_coinbase_key
+VITE_APPLE_PAY_MERCHANT_ID=merchant.com.vsspeed
+
+# Encryption Keys
+VITE_TRANSACTION_ENCRYPTION_KEY=generate_256bit_hex_key
+VITE_BACKUP_ENCRYPTION_KEY=generate_256bit_hex_key
+
+# JWT Secret
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRY=1h
+
+# Node Environment
+NODE_ENV=development
