--- a/amtuning-local/firebase.json
+++ b/amtuning-local/firebase.json
@@ -1,8 +1,4 @@
-# VS SPEED - Firebase Configuration
 {
-  "projects": {
-    "default": "vsspeed-global"
-  },
   "hosting": {
     "public": "dist",
     "ignore": [
@@ -18,36 +14,25 @@
     ],
     "headers": [
       {
-        "source": "**",
+        "source": "**/*.@(jpg|jpeg|gif|png|svg|webp)",
         "headers": [
           {
-            "key": "X-Frame-Options",
-            "value": "DENY"
-          },
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
+          }
+        ]
+      },
+      {
+        "source": "**/*.@(js|css)",
+        "headers": [
           {
-            "key": "X-Content-Type-Options",
-            "value": "nosniff"
-          },
-          {
-            "key": "Strict-Transport-Security",
-            "value": "max-age=31536000; includeSubDomains"
+            "key": "Cache-Control",
+            "value": "max-age=31536000"
           }
         ]
       }
-    ]
-  },
-  "functions": {
-    "source": "functions",
-    "runtime": "nodejs18",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "storage": {
-    "rules": "storage.rules"
+    ],
+    "cleanUrls": true,
+    "trailingSlash": false
   }
 }
